--- a/EFI_debug/OC/Config.plist
+++ b/EFI_debug/OC/Config.plist
@@ -833,7 +833,7 @@
                     <key>BundlePath</key>
                     <string>VirtualSMC.kext</string>
                     <key>Comment</key>
-                    <string>V1.2.8 | 黑苹果必备驱动程序，必须排第二位</string>
+                    <string>V1.2.9 | 黑苹果必备驱动程序，必须排第二位</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -869,7 +869,7 @@
                     <key>BundlePath</key>
                     <string>AppleALC.kext</string>
                     <key>Comment</key>
-                    <string>V1.6.9 | 黑苹果仿冒声卡驱动</string>
+                    <string>V1.7.0 | 黑苹果仿冒声卡驱动</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -995,7 +995,7 @@
                     <key>BundlePath</key>
                     <string>VoodooPS2Controller.kext</string>
                     <key>Comment</key>
-                    <string>V2.2.7 | 触控鼠标键盘1</string>
+                    <string>V2.2.8 | 触控鼠标键盘1</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1013,7 +1013,7 @@
                     <key>BundlePath</key>
                     <string>VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Keyboard.kext</string>
                     <key>Comment</key>
-                    <string>V2.2.7 | 触控鼠标键盘2</string>
+                    <string>V2.2.8 | 触控鼠标键盘2</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1031,7 +1031,7 @@
                     <key>BundlePath</key>
                     <string>VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Trackpad.kext</string>
                     <key>Comment</key>
-                    <string>V2.2.7 | 触控鼠标键盘2</string>
+                    <string>V2.2.8 | 触控鼠标键盘2</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1067,7 +1067,7 @@
                     <key>BundlePath</key>
                     <string>VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Mouse.kext</string>
                     <key>Comment</key>
-                    <string>V2.2.7</string>
+                    <string>V2.2.8</string>
                     <key>Enabled</key>
                     <false/>
                     <key>ExecutablePath</key>
@@ -1085,7 +1085,7 @@
                     <key>BundlePath</key>
                     <string>WhateverGreen.kext</string>
                     <key>Comment</key>
-                    <string>V1.5.7 | 黑苹果显卡驱动</string>
+                    <string>V1.5.8 | 黑苹果显卡驱动</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1229,7 +1229,7 @@
                     <key>BundlePath</key>
                     <string>CpuTscSync.kext</string>
                     <key>Comment</key>
-                    <string>V1.0.6 | 休眠唤醒后内核崩溃修复</string>
+                    <string>V1.0.7 | 休眠唤醒后内核崩溃修复</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1499,7 +1499,7 @@
                     <key>BundlePath</key>
                     <string>SMCBatteryManager.kext</string>
                     <key>Comment</key>
-                    <string>V1.2.8 | 于笔记本电脑的电池读数测量</string>
+                    <string>V1.2.9 | 于笔记本电脑的电池读数测量</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1517,7 +1517,7 @@
                     <key>BundlePath</key>
                     <string>SMCLightSensor.kext</string>
                     <key>Comment</key>
-                    <string>V1.2.8 | 笔记本电脑上的环境光传感器</string>
+                    <string>V1.2.9 | 笔记本电脑上的环境光传感器</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1535,7 +1535,7 @@
                     <key>BundlePath</key>
                     <string>SMCProcessor.kext</string>
                     <key>Comment</key>
-                    <string>V1.2.8 | CPU 提供温度传感器支持</string>
+                    <string>V1.2.9 | CPU 提供温度传感器支持</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1553,7 +1553,7 @@
                     <key>BundlePath</key>
                     <string>SMCSuperIO.kext</string>
                     <key>Comment</key>
-                    <string>V1.2.8 | 检测风扇速度</string>
+                    <string>V1.2.9 | 检测风扇速度</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1671,6 +1671,8 @@
                     <string></string>
                     <key>MinKernel</key>
                     <string></string>
+                    <key>Strategy</key>
+                    <string>Disable</string>
                 </dict>
             </array>
             <key>Emulate</key>
@@ -2262,6 +2264,8 @@
                 <integer>0</integer>
                 <key>DisplayLevel</key>
                 <integer>0</integer>
+                <key>LogModules</key>
+                <string></string>
                 <key>SerialInit</key>
                 <false/>
                 <key>SysReport</key>
